--- a/templates/dashboard/admin/projects/projectdetailview.html
+++ b/templates/dashboard/admin/projects/projectdetailview.html
@@ -16,158 +16,44 @@
                           </div>
                         </div>
                       <hr class="my-5">
-                    
-                      <!--Carousel Wrapper-->
-                      <div id="multi-item-example" class="carousel slide carousel-multi-item" data-ride="carousel">
-                    
-                        <!--Controls-->
-                        <div class="controls-top">
-                          <a class="btn-floating" href="#multi-item-example" data-slide="prev"><i class="fas fa-chevron-left"></i></a>
-                          <a class="btn-floating" href="#multi-item-example" data-slide="next"><i
-                                                                                                  class="fas fa-chevron-right"></i></a>
-                        </div>
-                        <!--/.Controls-->
-                    
-                        <!--Indicators-->
-                        <ol class="carousel-indicators">
-                          <li data-target="#multi-item-example" data-slide-to="0" class="active"></li>
-                          <li data-target="#multi-item-example" data-slide-to="1"></li>
-                          <li data-target="#multi-item-example" data-slide-to="2"></li>
-                    
-                        </ol>
-                        <!--/.Indicators-->
-                    
-                        <!--Slides-->
-                        <div class="carousel-inner" role="listbox">
-                    
-                          <!--First slide-->
-                          <div class="carousel-item active">
-                    
-                            <div class="col-md-3" style="float:left">
-                              <div class="card mb-2">
-                                <img class="card-img-top"
-                                     src="https://mdbootstrap.com/img/Photos/Horizontal/City/4-col/img%20(60).jpg" alt="Card image cap">
+                          <div class="row">
+                            {% for video in videodata %}
+                            <div class="col-md-6">
+                              <div class="card h-100">
+                                <a href="/video/{{ video._id }}"><img src="{{ video.thumbnail }}" class="card-img-top" alt="thumbnail"/></a>
                                 <div class="card-body">
-                                  <h4 class="card-title">Card title</h4>
-                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                                    card's content.</p>
-                                  <a class="btn btn-primary">Button</a>
+                                    <div class="row">
+                                        <div class="col-md-10">
+                                            <h5 class="card-title">
+                                                <a href="/video/{{ video._id }}">{{ video.title }}</a>
+                                                </h5>
+                                        </div>
+                                        <div class="col-md-1">
+                                            <span class="badge badge-primary">{{ video.category }}</span>
+                                        </div>
+                                    </div>
+                                  <p class="card-text">
+                                    {{video.description[:100]}}...
+                                  </p>
+                                </div>
+                                <div class="card-footer">
+                                  <small class="text-muted">{{ video.created_at.strftime('%c') }}</small>
+                                  <div class="col float-end">
+                                    <span class="badge badge-secondary">{{ video.projectname }}</span>
+                                </div>
                                 </div>
                               </div>
+                              <br>
                             </div>
-                    
-                            <div class="col-md-3" style="float:left">
-                              <div class="card mb-2">
-                                <img class="card-img-top"
-                                     src="https://mdbootstrap.com/img/Photos/Horizontal/City/4-col/img%20(60).jpg" alt="Card image cap">
-                                <div class="card-body">
-                                  <h4 class="card-title">Card title</h4>
-                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                                    card's content.</p>
-                                  <a class="btn btn-primary">Button</a>
-                                </div>
-                              </div>
-                            </div>
-                    
-                            <div class="col-md-3" style="float:left">
-                              <div class="card mb-2">
-                                <img class="card-img-top"
-                                     src="https://mdbootstrap.com/img/Photos/Horizontal/City/4-col/img%20(60).jpg" alt="Card image cap">
-                                <div class="card-body">
-                                  <h4 class="card-title">Card title</h4>
-                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                                    card's content.</p>
-                                  <a class="btn btn-primary">Button</a>
-                                </div>
-                              </div>
-                            </div>
-                    
-                            <div class="col-md-3" style="float:left">
-                              <div class="card mb-2">
-                                <img class="card-img-top"
-                                     src="https://mdbootstrap.com/img/Photos/Horizontal/City/4-col/img%20(60).jpg" alt="Card image cap">
-                                <div class="card-body">
-                                  <h4 class="card-title">Card title</h4>
-                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                                    card's content.</p>
-                                  <a class="btn btn-primary">Button</a>
-                                </div>
-                              </div>
-                            </div>
-                    
+                            {% endfor %}
                           </div>
-                          <!--/.First slide-->
-                    
-                          <!--Second slide-->
-                          <div class="carousel-item">
-                    
-                            <div class="col-md-3" style="float:left">
-                              <div class="card mb-2">
-                                <img class="card-img-top"
-                                     src="https://mdbootstrap.com/img/Photos/Horizontal/City/4-col/img%20(60).jpg" alt="Card image cap">
-                                <div class="card-body">
-                                  <h4 class="card-title">Card title</h4>
-                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                                    card's content.</p>
-                                  <a class="btn btn-primary">Button</a>
-                                </div>
-                              </div>
-                            </div>
-                    
-                            <div class="col-md-3" style="float:left">
-                              <div class="card mb-2">
-                                <img class="card-img-top"
-                                     src="https://mdbootstrap.com/img/Photos/Horizontal/City/4-col/img%20(47).jpg" alt="Card image cap">
-                                <div class="card-body">
-                                  <h4 class="card-title">Card title</h4>
-                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                                    card's content.</p>
-                                  <a class="btn btn-primary">Button</a>
-                                </div>
-                              </div>
-                            </div>
-                    
-                            <div class="col-md-3" style="float:left">
-                              <div class="card mb-2">
-                                <img class="card-img-top"
-                                     src="https://mdbootstrap.com/img/Photos/Horizontal/City/4-col/img%20(48).jpg" alt="Card image cap">
-                                <div class="card-body">
-                                  <h4 class="card-title">Card title</h4>
-                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                                    card's content.</p>
-                                  <a class="btn btn-primary">Button</a>
-                                </div>
-                              </div>
-                            </div>
-                    
-                            <div class="col-md-3" style="float:left">
-                              <div class="card mb-2">
-                                <img class="card-img-top"
-                                     src="https://mdbootstrap.com/img/Photos/Horizontal/City/4-col/img%20(47).jpg" alt="Card image cap">
-                                <div class="card-body">
-                                  <h4 class="card-title">Card title</h4>
-                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                                    card's content.</p>
-                                  <a class="btn btn-primary">Button</a>
-                                </div>
-                              </div>
-                            </div>
-                    
-                          </div>
-                          <!--/.Second slide-->
-                    
-                    
-                    
-                        </div>
-                        <!--/.Slides-->
-                    
                       </div>
-                      <!--/.Carousel Wrapper-->
-                    <hr>
                 </div>
             </div>
            </div>
         </div>
     </div>
 </main>
+
+
 {% endblock %}
