--- a/templates/home.html
+++ b/templates/home.html
@@ -65,6 +65,7 @@
           class="btn btn-dark px-3"
           href="https://github.com/Mapplecode/video-app-Ian-Nagy-"
           role="button"
+          target="_blank"
           ><i class="fab fa-github"></i
         ></a>
 
