--- a/templates/dashboard/admin/allvideos.html
+++ b/templates/dashboard/admin/allvideos.html
@@ -52,9 +52,11 @@
                   </td>
                   <td>{{ video.created_at.strftime('%c') }}</td>
                   <td>
-                    <button type="button" class="btn btn-link btn-sm btn-rounded">
-                      Edit
-                    </button>
+                    <a href="/video/{{ video._id }}">
+                      <button type="button" class="btn btn-link btn-sm btn-rounded">
+                        View  
+                        </button>
+                    </a>
                   </td>
                 </tr>
               </tbody>
