--- a/templates/dashboard/admin/projects/projectdetailview.html
+++ b/templates/dashboard/admin/projects/projectdetailview.html
@@ -18,9 +18,9 @@
                       <hr class="my-5">
                           <div class="row">
                             {% for video in videodata %}
-                            <div class="col-md-6">
+                            <div class="col-md-4">
                               <div class="card h-100">
-                                <a href="/video/{{ video._id }}"><img src="{{ video.thumbnail }}" class="card-img-top" alt="thumbnail"/></a>
+                                <a href="/video/{{ video._id }}"><img src="/{{ video.thumbnail }}" class="card-img-top" alt="thumbnail"/></a>
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col-md-10">
